[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/thrishaStuff/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/thrishaStuff/Audio/MouseClick.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/leoStuff/HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/thrishaStuff/Audio/Dorm/Kevin MacLeodï¼š Chill.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/MenuAudio.gd" type="Script" id=5]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/roulette.png" type="Texture" id=6]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/discordButton.png" type="Texture" id=7]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/menuBackground.png" type="Texture" id=8]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/credits.png" type="Texture" id=9]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/cleaningButton.png" type="Texture" id=10]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/chapter1.png" type="Texture" id=11]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/controlsButton.png" type="Texture" id=12]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/teapartyButton.png" type="Texture" id=13]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/prologue.png" type="Texture" id=14]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/chapter2.png" type="Texture" id=15]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/chapter3.png" type="Texture" id=16]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/bartendingButton.png" type="Texture" id=17]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/cardMatchButton.png" type="Texture" id=18]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/quitButton.png" type="Texture" id=19]

[sub_resource type="Theme" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="menuBackground" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 8 )

[node name="prologue" type="Sprite" parent="."]
position = Vector2( 669, 298 )
texture = ExtResource( 14 )
offset = Vector2( 291, 242 )

[node name="Prologue" type="Button" parent="prologue"]
anchor_left = 0.349
anchor_top = 0.277
anchor_right = 0.349
anchor_bottom = 0.277
margin_left = -892.08
margin_top = -343.16
margin_right = -444.08
margin_bottom = -253.16
theme = SubResource( 1 )
flat = true

[node name="chapter1" type="Sprite" parent="."]
position = Vector2( 680, 418 )
texture = ExtResource( 11 )
offset = Vector2( 280, 122 )

[node name="Chapter 1" type="Button" parent="chapter1"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.349
anchor_top = 0.399
anchor_right = 0.349
anchor_bottom = 0.399
margin_left = -905.08
margin_top = -474.92
margin_right = -457.08
margin_bottom = -384.92

[node name="chapter2" type="Sprite" parent="."]
position = Vector2( 676, 540 )
texture = ExtResource( 15 )
offset = Vector2( 284, 0 )

[node name="Chapter 2" type="Button" parent="chapter2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -231.0
margin_top = -41.0
margin_right = 216.0
margin_bottom = 45.0

[node name="chapter3" type="Sprite" parent="."]
position = Vector2( 679, 661 )
texture = ExtResource( 16 )
offset = Vector2( 281, -121 )

[node name="Chapter 3" type="Button" parent="chapter3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -234.0
margin_top = -39.0
margin_right = 219.0
margin_bottom = 48.0

[node name="teaParty" type="Sprite" parent="."]
position = Vector2( 1264, 298 )
texture = ExtResource( 13 )
offset = Vector2( -304, 242 )

[node name="teaParty" type="Button" parent="teaParty"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -241.0
margin_top = -42.0
margin_right = 212.0
margin_bottom = 45.0

[node name="bartending" type="Sprite" parent="."]
position = Vector2( 1257, 419 )
texture = ExtResource( 17 )
offset = Vector2( -297, 121 )

[node name="bartendingButton" type="Button" parent="bartending"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -233.0
margin_top = -46.0
margin_right = 220.0
margin_bottom = 41.0

[node name="cleaning" type="Sprite" parent="."]
position = Vector2( 1254, 539 )
texture = ExtResource( 10 )
offset = Vector2( -294, 1 )

[node name="cleaningButton" type="Button" parent="cleaning"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -233.0
margin_top = -46.0
margin_right = 220.0
margin_bottom = 41.0

[node name="cardMatch" type="Sprite" parent="."]
position = Vector2( 1259, 662 )
texture = ExtResource( 18 )
offset = Vector2( -299, -122 )

[node name="cardMatchButton" type="Button" parent="cardMatch"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -233.0
margin_top = -46.0
margin_right = 220.0
margin_bottom = 41.0

[node name="roulette" type="Sprite" parent="."]
position = Vector2( 1258, 778 )
texture = ExtResource( 6 )
offset = Vector2( -298, -238 )

[node name="rouletteButton" type="Button" parent="roulette"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -233.0
margin_top = -46.0
margin_right = 220.0
margin_bottom = 41.0

[node name="controls" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 12 )

[node name="credits" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 9 )

[node name="discord" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 7 )

[node name="quit" type="Sprite" parent="."]
position = Vector2( 1793, 66 )
texture = ExtResource( 19 )
offset = Vector2( -833, 474 )

[node name="Quit" type="Button" parent="quit"]
margin_left = -159.0
margin_top = -95.0
margin_right = 190.0
margin_bottom = 73.0
rect_rotation = 16.6124
rect_pivot_offset = Vector2( 144, 82 )
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -447.0
margin_top = -629.0
margin_right = -382.0
margin_bottom = -537.0
rect_scale = Vector2( 6.12, 6.12 )

[node name="testing" type="Button" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 20.0
text = "testing"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 65.0
margin_bottom = 44.0
text = "Controls"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 65.0
margin_bottom = 92.0
text = "Credits"

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( 980, 566 )
stream = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 3 )]
position = Vector2( 162, -121 )
limit_left = 0
limit_top = 0
limit_right = 2225
limit_bottom = 0

[node name="map" parent="HUD" index="0"]
enable = false

[node name="menu" parent="HUD" index="1"]
enable = false

[node name="MenuAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -3.0
autoplay = true
script = ExtResource( 5 )

[connection signal="button_down" from="prologue/Prologue" to="." method="_on_Prologue_button_down"]
[connection signal="mouse_entered" from="prologue/Prologue" to="." method="_on_Prologue_mouse_entered"]
[connection signal="mouse_exited" from="prologue/Prologue" to="." method="_on_Prologue_mouse_exited"]
[connection signal="pressed" from="prologue/Prologue" to="." method="_on_Prologue_pressed"]
[connection signal="button_down" from="chapter1/Chapter 1" to="." method="_on_Chapter_1_button_down"]
[connection signal="mouse_entered" from="chapter1/Chapter 1" to="." method="_on_Chapter_1_mouse_entered"]
[connection signal="mouse_exited" from="chapter1/Chapter 1" to="." method="_on_Chapter_1_mouse_exited"]
[connection signal="pressed" from="chapter1/Chapter 1" to="." method="_on_Chapter_1_pressed"]
[connection signal="button_down" from="chapter2/Chapter 2" to="." method="_on_Chapter_2_button_down"]
[connection signal="mouse_entered" from="chapter2/Chapter 2" to="." method="_on_Chapter_2_mouse_entered"]
[connection signal="mouse_exited" from="chapter2/Chapter 2" to="." method="_on_Chapter_2_mouse_exited"]
[connection signal="pressed" from="chapter2/Chapter 2" to="." method="_on_Chapter_2_pressed"]
[connection signal="button_down" from="chapter3/Chapter 3" to="." method="_on_Chapter_3_button_down"]
[connection signal="mouse_entered" from="chapter3/Chapter 3" to="." method="_on_Chapter_3_mouse_entered"]
[connection signal="mouse_exited" from="chapter3/Chapter 3" to="." method="_on_Chapter_3_mouse_exited"]
[connection signal="pressed" from="chapter3/Chapter 3" to="." method="_on_Chapter_3_pressed"]
[connection signal="button_down" from="teaParty/teaParty" to="." method="_on_teaParty_button_down"]
[connection signal="mouse_entered" from="teaParty/teaParty" to="." method="_on_teaParty_mouse_entered"]
[connection signal="mouse_exited" from="teaParty/teaParty" to="." method="_on_teaParty_mouse_exited"]
[connection signal="pressed" from="teaParty/teaParty" to="." method="_on_teaParty_pressed"]
[connection signal="button_down" from="bartending/bartendingButton" to="." method="_on_bartendingButton_button_down"]
[connection signal="mouse_entered" from="bartending/bartendingButton" to="." method="_on_bartendingButton_mouse_entered"]
[connection signal="mouse_exited" from="bartending/bartendingButton" to="." method="_on_bartendingButton_mouse_exited"]
[connection signal="pressed" from="bartending/bartendingButton" to="." method="_on_bartendingButton_pressed"]
[connection signal="button_down" from="cleaning/cleaningButton" to="." method="_on_cleaningButton_button_down"]
[connection signal="mouse_entered" from="cleaning/cleaningButton" to="." method="_on_cleaningButton_mouse_entered"]
[connection signal="mouse_exited" from="cleaning/cleaningButton" to="." method="_on_cleaningButton_mouse_exited"]
[connection signal="pressed" from="cleaning/cleaningButton" to="." method="_on_cleaningButton_pressed"]
[connection signal="button_down" from="cardMatch/cardMatchButton" to="." method="_on_cardMatchButton_button_down"]
[connection signal="mouse_entered" from="cardMatch/cardMatchButton" to="." method="_on_cardMatchButton_mouse_entered"]
[connection signal="mouse_exited" from="cardMatch/cardMatchButton" to="." method="_on_cardMatchButton_mouse_exited"]
[connection signal="pressed" from="cardMatch/cardMatchButton" to="." method="_on_cardMatchButton_pressed"]
[connection signal="button_down" from="quit/Quit" to="." method="_on_Quit_button_down"]
[connection signal="mouse_entered" from="quit/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="quit/Quit" to="." method="_on_Quit_mouse_exited"]
[connection signal="pressed" from="quit/Quit" to="." method="_on_Quit_pressed"]
[connection signal="button_down" from="VBoxContainer/testing" to="." method="_on_StartButton_button_down"]
[connection signal="pressed" from="VBoxContainer/testing" to="." method="_on_StartButton_pressed"]
[connection signal="button_down" from="VBoxContainer/Options" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="VBoxContainer/Credits" to="." method="_on_Credits_button_down"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]

[editable path="HUD"]
